save times with actions

--- a/notebooks_messy/StrangeObjects.ipynb
+++ b/notebooks_messy/StrangeObjects.ipynb
@@ -24,20 +24,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0e512ae8-ea79-4857-8610-e960f93ad6e3",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GridWorlds [c15fd557-8ec5-4bf9-9d87-df57ac477796]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import Makie   # Visualization Library\n",
     "using Revise      # For development; makes it so modifications\n",
@@ -57,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f55630a1",
    "metadata": {},
    "outputs": [],
@@ -67,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5c0fea3a-5748-479d-a252-85de2bbcb9c7",
    "metadata": {
     "tags": []
@@ -86,7 +78,7 @@
        "Main.Utils.MappedUniform()"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "313c14b7-1f1d-4698-b01c-eec1933bb749",
    "metadata": {
     "tags": []
@@ -119,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2a9f0278-b761-4322-ad3f-3d415bec205c",
    "metadata": {},
    "outputs": [
@@ -129,7 +121,7 @@
        "var\"##StaticGenFunction_uniform_agent_pos#317\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "079c3b8b-48cc-4212-ae81-820c3af3df04",
    "metadata": {},
    "outputs": [
@@ -165,7 +157,7 @@
        "handle_wall_intersection (generic function with 1 method)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,28 +209,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "efcc51e8-203a-4d6b-8bfe-3eb6580aae73",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "var\"##StaticGenFunction_motion_model#352\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
+       "var\"##StaticGenFunction_motion_model#534\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "@gen (static) function motion_model(state, action, t_to_params)\n",
+    "    (a, wall_clock_time) = action\n",
     "    (pos, t_prev, prev_hit_wall) = state\n",
-    "    params = t_to_params(t)\n",
+    "    params = t_to_params(t_prev + 1)\n",
     "    w, σ = params.map, params.step.σ\n",
     "    \n",
-    "    next_pos_det = det_next_pos(pos, action, params.step.Δ)\n",
+    "    next_pos_det = det_next_pos(pos, a, params.step.Δ)\n",
     "    noisy_next_pos ~ broadcasted_normal(next_pos_det, params.step.σ)\n",
     "    (next_pos, hit_wall) = handle_wall_intersection(pos, noisy_next_pos, w)\n",
     "    \n",
@@ -256,17 +249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "0ce69a83-8fa6-4eca-af79-de37fc5a1d16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any, Any], false, Union{Nothing, Some{Any}}[nothing, nothing], var\"##observe_noisy_distances#360\", Bool[0, 0], false)"
+       "DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any, Any], false, Union{Nothing, Some{Any}}[nothing, nothing], var\"##observe_noisy_distances#542\", Bool[0, 0], false)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,43 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "8786dc94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# state, t_to_params = ([1.5, 1.5], 0), T_TO_PARAMS\n",
-    "# # # (pos, t) = state\n",
-    "# # # params = t_to_params(t)\n",
-    "\n",
-    "# # # p = reshape([pos..., params.obs.orientation], (1, 3))\n",
-    "# # # _as = L.create_angles(params.obs.fov, params.obs.n_rays)\n",
-    "# # # wall_segs = GridWorlds.wall_segments(params.map)\n",
-    "# # # strange_segs = GridWorlds.strange_segments(params.map)\n",
-    "\n",
-    "# # # w, s_noise, outlier, outlier_vol, zmax = params.obs.wall_sensor_args\n",
-    "# # # dists_walls = L.cast(p, wall_segs; num_a=params.obs.n_rays, zmax)\n",
-    "\n",
-    "# # # w, s_noise, outlier, outlier_vol, zmax = params.obs.strange_sensor_args\n",
-    "# # # dists_strange = L.cast(p, strange_segs; num_a=params.obs.n_rays, zmax)\n",
-    "\n",
-    "# # # dists = min.(dists_walls, dists_strange)\n",
-    "# # # dists = reshape(dists, (:,))\n",
-    "\n",
-    "# # # # get vector of sigmas, to apply to `dists`\n",
-    "# # # # params.obs.sensor_args.σ_wall for walls; params.obs.sensor_args.σ_strange for strange\n",
-    "# # # σ_wall = params.obs.wall_sensor_args.σ\n",
-    "# # # σ_strange = params.obs.strange_sensor_args.σ\n",
-    "# # # sigmas = [w < s ? σ_wall : σ_strange for (w, s) in zip(dists_walls, dists_strange)]\n",
-    "# # # sigmas = reshape(sigmas, (:,))\n",
-    "\n",
-    "# # # Gen.mvnormal(dists, LinearAlgebra.Diagonal(sigmas))\n",
-    "# # observe_noisy_distances(state, t_to_params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "5837a12e-5eb7-46da-b4d4-e344f35e8fd9",
    "metadata": {
     "tags": []
@@ -377,10 +334,10 @@
     {
      "data": {
       "text/plain": [
-       "GenPOMDPs.GenPOMDP(var\"##StaticGenFunction_uniform_agent_pos#317\"(Dict{Symbol, Any}(), Dict{Symbol, Any}()), var\"##StaticGenFunction_motion_model#352\"(Dict{Symbol, Any}(), Dict{Symbol, Any}()), DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any, Any], false, Union{Nothing, Some{Any}}[nothing, nothing], var\"##observe_noisy_distances#360\", Bool[0, 0], false), var\"#65#66\"())"
+       "GenPOMDPs.GenPOMDP(var\"##StaticGenFunction_uniform_agent_pos#317\"(Dict{Symbol, Any}(), Dict{Symbol, Any}()), var\"##StaticGenFunction_motion_model#534\"(Dict{Symbol, Any}(), Dict{Symbol, Any}()), DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any, Any], false, Union{Nothing, Some{Any}}[nothing, nothing], var\"##observe_noisy_distances#542\", Bool[0, 0], false), var\"#147#148\"())"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "204c2329-a938-4e58-aac0-c81737db7168",
    "metadata": {
     "tags": []
@@ -406,10 +363,10 @@
     {
      "data": {
       "text/plain": [
-       "GenPOMDPs.var\"##StaticGenFunction__ControlledTrajectoryModel#432\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
+       "GenPOMDPs.var\"##StaticGenFunction__ControlledTrajectoryModel#614\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "id": "12a7671c-410e-4012-9e5c-d008bf4196ae",
    "metadata": {
     "tags": []
@@ -452,10 +409,25 @@
     "        filename = \"saves/\" * string(now()) * \"__pomdp_trace.jld\"\n",
     "        Utils.serialize_trace_and_viz_actions(filename, tr[];\n",
     "            viz_actions=viz_actions,\n",
-    "            args_to_serializeable = args -> (args[1:2]..., args[3].params)\n",
+    "            # args_to_serializeable = args -> (args[1:2]..., args[3].params)\n",
     "        )\n",
     "    end\n",
     "    return save_tr\n",
+    "end\n",
+    "\n",
+    "function get_take_action(_take_action)\n",
+    "    function take_action(a)\n",
+    "        _take_action((a, Dates.now()))\n",
+    "    end\n",
+    "    return take_action\n",
+    "end\n",
+    "function get_interactive_trace(args...; kwargs...)\n",
+    "    (trace, _take_action) = GenPOMDPs.interactive_world_trace(args...; kwargs...)\n",
+    "    return (trace, get_take_action(_take_action))\n",
+    "end\n",
+    "function make_trace_interactive(args...; kwargs...)\n",
+    "    (trace, _take_action) = GenPOMDPs.make_trace_interactive(args...; kwargs...)\n",
+    "    return (trace, get_take_action(_take_action))\n",
     "end\n",
     "\n",
     "function get_did_hitwall_observable(trace)\n",
@@ -482,11 +454,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "503d089d-b461-4115-9b73-f726dafe279a",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 21,
+   "id": "b07fe72c",
+   "metadata": {},
    "outputs": [],
    "source": [
     "struct DistanceToConstant\n",
@@ -496,8 +466,18 @@
     "struct MultiplyDistanceByConstant\n",
     "    c\n",
     "end\n",
-    "(d::MultiplyDistanceByConstant)(x) = x * d.c\n",
-    "\n",
+    "(d::MultiplyDistanceByConstant)(x) = x * d.c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "503d089d-b461-4115-9b73-f726dafe279a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "_PARAMS = (;\n",
     "    # map = GridWorlds.load_custom_map(5),\n",
     "    map = GridWorlds.load_custom_map(4),\n",
@@ -530,14 +510,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "id": "9321f581-3f9d-404a-8689-0f7f279596c0",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "world_trace, take_action = GenPOMDPs.interactive_world_trace(\n",
+    "world_trace, take_action = get_interactive_trace(\n",
     "    trajectory_model, T_TO_PARAMS,\n",
     "    choicemap((GenPOMDPs.state_addr(0, :cell), (3, 3)))  \n",
     ");"
@@ -553,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "id": "9dd2dc13",
    "metadata": {},
    "outputs": [
@@ -563,7 +543,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -571,7 +551,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T14:30:52.756__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-13T14:48:28.013__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -669,6 +649,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "2418011b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-13T14:45:20.944__pomdp_trace.jld.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# times = map(x -> x[2], GenPOMDPs.action_sequence(world_trace[]))\n",
+    "# times[2:end] - times[1:(end-1)]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9f7788c7",
    "metadata": {},
@@ -699,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "id": "665b91b1-9622-41ed-b963-3bee730df746",
    "metadata": {},
    "outputs": [
@@ -709,7 +708,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +734,9 @@
     "    # \"saves/2023-12-13T14:23:50.487__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-13T14:26:06.838__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-13T14:28:28.878__pomdp_trace.jld\",\n",
-    "    \"saves/2023-12-13T14:30:52.756__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-13T14:30:52.756__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-13T14:45:20.944__pomdp_trace.jld\",\n",
+    "    \"saves/2023-12-13T14:48:28.013__pomdp_trace.jld\",\n",
     "\n",
     "    # clean version - saves/2023-12-12T20:52:10.206__pomdp_trace.jld\n",
     "    # noisy version - saves/2023-12-12T20:49:13.392__pomdp_trace.jld\n",
@@ -743,13 +744,13 @@
     "    # map 18 - clean - saves/2023-12-12T21:00:33.101__pomdp_trace.jld\n",
     "    # map 18 - noisy - saves/2023-12-12T21:02:18.894__pomdp_trace.jld\n",
     "    trajectory_model,\n",
-    "    args_from_serializeable=(args -> (args[1:2]..., ConstantTToParams(args[3]))),\n",
+    "    # args_from_serializeable=(args -> (args[1:2]..., ConstantTToParams(args[3]))),\n",
     "    # args_from_serializeable=(args -> (\n",
     "    #         args[1:2]...,\n",
     "    #         SwitchTToParams(_PARAMS_CLEAN, _PARAMS_NOISY, t -> t < 60 || !_noise_enabled)\n",
     "    #     ))\n",
     "    );\n",
-    "trace2, take_action2 = GenPOMDPs.make_trace_interactive(tr2);\n",
+    "trace2, take_action2 = make_trace_interactive(tr2);\n",
     "\n",
     "(f, t, _replay_actions) = GridWorlds.Viz.play_as_agent_gui(\n",
     "    get_obs_seq(trace2),\n",
@@ -759,6 +760,28 @@
     "    framerate=8\n",
     ")\n",
     "display(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d3319d53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "238495 milliseconds"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "times = map(x -> x[2], GenPOMDPs.action_sequence(trace2[]))\n",
+    "maximum(times[2:end] - times[1:end-1])"
    ]
   },
   {
