--- a/notebooks_messy/StrangeObjects.ipynb
+++ b/notebooks_messy/StrangeObjects.ipynb
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "id": "12a7671c-410e-4012-9e5c-d008bf4196ae",
    "metadata": {
     "tags": []
@@ -438,6 +438,13 @@
     "    GLMakie.GLFW.SetWindowShouldClose(glfw_window, true)\n",
     "end\n",
     "\n",
+    "function get_action_times_observable(trace)\n",
+    "    return map(trace -> [t for (a, t) in GenPOMDPs.action_sequence(trace)], trace)\n",
+    "end\n",
+    "function get_timing_args(trace; speedup_factor=1, max_delay=5) # 5 seconds max delay\n",
+    "    return (get_action_times_observable(trace), speedup_factor, max_delay)\n",
+    "end\n",
+    "\n",
     "struct ConstantTToParams\n",
     "    params\n",
     "end\n",
@@ -454,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "id": "b07fe72c",
    "metadata": {},
    "outputs": [],
@@ -471,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "503d089d-b461-4115-9b73-f726dafe279a",
    "metadata": {
     "tags": []
@@ -510,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "id": "9321f581-3f9d-404a-8689-0f7f279596c0",
    "metadata": {
     "tags": []
@@ -533,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "id": "9dd2dc13",
    "metadata": {},
    "outputs": [
@@ -543,16 +550,9 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T14:48:28.013__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
@@ -563,14 +563,17 @@
     "    framerate=8,\n",
     "    close_on_hitwall=true,\n",
     "    did_hitwall_observable=get_did_hitwall_observable(world_trace),\n",
-    "    close_window=close_window\n",
+    "    close_window=close_window,\n",
+    "\n",
+    "    # For playback\n",
+    "    timing_args=get_timing_args(world_trace; speedup_factor=1, max_delay=5)\n",
     ")\n",
     "display(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 59,
    "id": "31143f7c-4f46-4aa9-a409-63fcf112224d",
    "metadata": {
     "tags": []
@@ -582,7 +585,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +598,10 @@
     "    framerate=8,\n",
     "    close_on_hitwall=true,\n",
     "    did_hitwall_observable=get_did_hitwall_observable(world_trace),\n",
-    "    close_window=close_window\n",
+    "    close_window=close_window,\n",
+    "\n",
+    "    # For playback\n",
+    "    timing_args=get_timing_args(world_trace; speedup_factor=1, max_delay=5)\n",
     ")\n",
     "display(f)"
    ]
@@ -610,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "id": "82e17666-8874-4c0e-abea-338c63a99a91",
    "metadata": {
     "tags": []
@@ -622,16 +628,9 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T14:32:42.453__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
@@ -643,7 +642,9 @@
     "    framerate=8,\n",
     "    close_on_hitwall=true,\n",
     "    did_hitwall_observable=get_did_hitwall_observable(world_trace),\n",
-    "    close_window=close_window\n",
+    "    close_window=close_window,\n",
+    "\n",
+    "    timing_args=get_timing_args(world_trace; speedup_factor=1, max_delay=5)\n",
     ")\n",
     "display(f)"
    ]
@@ -698,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "id": "665b91b1-9622-41ed-b963-3bee730df746",
    "metadata": {},
    "outputs": [
@@ -708,7 +709,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +758,10 @@
     "    take_action2,\n",
     "    show_lines_to_walls=false,\n",
     "    save_fn=get_save_tr(trace2),\n",
-    "    framerate=8\n",
+    "    framerate=8,\n",
+    "\n",
+    "    # Timing control for playback\n",
+    "    timing_args=get_timing_args(trace2; speedup_factor=3, max_delay=5)\n",
     ")\n",
     "display(f)"
    ]
@@ -785,34 +789,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07e1a2ae",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7-element Vector{Any}:\n",
-       " (:animate_from_zero, 0)\n",
-       " (:pause, 8)\n",
-       " (:resume, 8)\n",
-       " (:pause, 69)\n",
-       " (:resume, 69)\n",
-       " (:pause, 119)\n",
-       " (:resume, 119)"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "_replay_actions"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "439bb29c",
    "metadata": {},
@@ -822,18 +798,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "80313680-f3d7-490c-ae38-52f453957de7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GLMakie.Screen(...)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(f, t) = GridWorlds.Viz.interactive_gui(\n",
     "    get_args(trace2[])[3](0).map, get_posobs_seq(trace2), take_action2,\n",
     "    save_fn=get_save_tr(trace2),\n",
-    "    framerate=8\n",
+    "    framerate=8,\n",
+    "\n",
+    "    # Timing control for playback\n",
+    "    timing_args=get_timing_args(trace2; speedup_factor=3, max_delay=5)\n",
     ")\n",
     "display(f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b69f213c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
