--- a/notebooks_messy/StrangeObjects.ipynb
+++ b/notebooks_messy/StrangeObjects.ipynb
@@ -29,7 +29,15 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GridWorlds [c15fd557-8ec5-4bf9-9d87-df57ac477796]\n"
+     ]
+    }
+   ],
    "source": [
     "import Makie   # Visualization Library\n",
     "using Revise      # For development; makes it so modifications\n",
@@ -209,17 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "efcc51e8-203a-4d6b-8bfe-3eb6580aae73",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "var\"##StaticGenFunction_motion_model#534\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
+       "var\"##StaticGenFunction_motion_model#355\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,17 +257,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "0ce69a83-8fa6-4eca-af79-de37fc5a1d16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any, Any], false, Union{Nothing, Some{Any}}[nothing, nothing], var\"##observe_noisy_distances#542\", Bool[0, 0], false)"
+       "DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any, Any], false, Union{Nothing, Some{Any}}[nothing, nothing], var\"##observe_noisy_distances#363\", Bool[0, 0], false)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "5837a12e-5eb7-46da-b4d4-e344f35e8fd9",
    "metadata": {
     "tags": []
@@ -334,10 +342,10 @@
     {
      "data": {
       "text/plain": [
-       "GenPOMDPs.GenPOMDP(var\"##StaticGenFunction_uniform_agent_pos#317\"(Dict{Symbol, Any}(), Dict{Symbol, Any}()), var\"##StaticGenFunction_motion_model#534\"(Dict{Symbol, Any}(), Dict{Symbol, Any}()), DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any, Any], false, Union{Nothing, Some{Any}}[nothing, nothing], var\"##observe_noisy_distances#542\", Bool[0, 0], false), var\"#147#148\"())"
+       "GenPOMDPs.GenPOMDP(var\"##StaticGenFunction_uniform_agent_pos#317\"(Dict{Symbol, Any}(), Dict{Symbol, Any}()), var\"##StaticGenFunction_motion_model#355\"(Dict{Symbol, Any}(), Dict{Symbol, Any}()), DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any, Any], false, Union{Nothing, Some{Any}}[nothing, nothing], var\"##observe_noisy_distances#363\", Bool[0, 0], false), var\"#69#70\"())"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "204c2329-a938-4e58-aac0-c81737db7168",
    "metadata": {
     "tags": []
@@ -363,10 +371,10 @@
     {
      "data": {
       "text/plain": [
-       "GenPOMDPs.var\"##StaticGenFunction__ControlledTrajectoryModel#614\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
+       "GenPOMDPs.var\"##StaticGenFunction__ControlledTrajectoryModel#435\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "12a7671c-410e-4012-9e5c-d008bf4196ae",
    "metadata": {
     "tags": []
@@ -456,12 +464,33 @@
     "    switch\n",
     "end\n",
     "(p::SwitchTToParams)(t::Makie.Observable) = p(t[])\n",
-    "(p::SwitchTToParams)(t) = p.switch(t) ? p.params1 : p.params2"
+    "(p::SwitchTToParams)(t) = p.switch(t) ? p.params1 : p.params2\n",
+    "\n",
+    "struct TimedSwitchTToParams\n",
+    "    params1\n",
+    "    params2\n",
+    "    timewindows_params1\n",
+    "    timewindows_params2\n",
+    "end\n",
+    "(p::TimedSwitchTToParams)(t::Makie.Observable) = p(t[])\n",
+    "function (p::TimedSwitchTToParams)(t)\n",
+    "    for (start, stop) in p.timewindows_params1\n",
+    "        if start ≤ t ≤ stop\n",
+    "            return p.params1\n",
+    "        end\n",
+    "    end\n",
+    "    for (start, stop) in p.timewindows_params2\n",
+    "        if start ≤ t ≤ stop\n",
+    "            return p.params2\n",
+    "        end\n",
+    "    end\n",
+    "    error(\"No time window found for time $t\")\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "b07fe72c",
    "metadata": {},
    "outputs": [],
@@ -478,16 +507,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 81,
    "id": "503d089d-b461-4115-9b73-f726dafe279a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "_PARAMS = (;\n",
+    "MAP_W_STRANGE = GridWorlds.load_custom_map(4)\n",
+    "MAP_WOUT_STRANGE = GridWorlds.load_custom_map(5)\n",
+    "_get_params(map) = (;\n",
     "    # map = GridWorlds.load_custom_map(5),\n",
-    "    map = GridWorlds.load_custom_map(4),\n",
+    "    map=map,\n",
     "    step = (; Δ = .5, σ = 0.005),\n",
     "    obs = (; fov = 2π, n_rays = 90, orientation = π/2,\n",
     "        # I think currently only σ is used\n",
@@ -511,13 +542,19 @@
     "    )\n",
     ")\n",
     "\n",
-    "T_TO_PARAMS = ConstantTToParams(_PARAMS)\n",
+    "T_TO_PARAMS = TimedSwitchTToParams(\n",
+    "    _get_params(MAP_W_STRANGE),\n",
+    "    _get_params(MAP_WOUT_STRANGE),\n",
+    "    ((6, Inf),),\n",
+    "    ((-Inf, 6),),\n",
+    ")\n",
+    "# T_TO_PARAMS = ConstantTToParams(_PARAMS)\n",
     "T_TO_PARAMS(0);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 82,
    "id": "9321f581-3f9d-404a-8689-0f7f279596c0",
    "metadata": {
     "tags": []
@@ -540,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 83,
    "id": "9dd2dc13",
    "metadata": {},
    "outputs": [
@@ -550,14 +587,22 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-13T15:17:15.827__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-13T15:17:19__pomdp_trace.jld.\n"
+     ]
     }
    ],
    "source": [
     "(f, t, actions) = GridWorlds.Viz.interactive_gui(\n",
-    "    T_TO_PARAMS(0).map, get_posobs_seq(world_trace), take_action,\n",
+    "    t -> T_TO_PARAMS(t).map, get_posobs_seq(world_trace), take_action,\n",
     "    save_fn=get_save_tr(world_trace),\n",
     "    show_lines_to_walls=true,\n",
     "    framerate=8,\n",
@@ -573,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 79,
    "id": "31143f7c-4f46-4aa9-a409-63fcf112224d",
    "metadata": {
     "tags": []
@@ -585,14 +630,14 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(f, t, actions) = GridWorlds.Viz.interactive_gui(\n",
-    "    T_TO_PARAMS(0).map, get_posobs_seq(world_trace), take_action,\n",
+    "    t -> T_TO_PARAMS(t).map, get_posobs_seq(world_trace), take_action,\n",
     "    save_fn=get_save_tr(world_trace),\n",
     "    show_lines_to_walls=false,\n",
     "    framerate=8,\n",
@@ -616,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "id": "82e17666-8874-4c0e-abea-338c63a99a91",
    "metadata": {
     "tags": []
@@ -628,7 +673,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "id": "665b91b1-9622-41ed-b963-3bee730df746",
    "metadata": {},
    "outputs": [
@@ -709,7 +754,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +782,8 @@
     "    # \"saves/2023-12-13T14:28:28.878__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-13T14:30:52.756__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-13T14:45:20.944__pomdp_trace.jld\",\n",
-    "    \"saves/2023-12-13T14:48:28.013__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-13T14:48:28.013__pomdp_trace.jld\",\n",
+    "    \"saves/2023-12-13T15:17:19__pomdp_trace.jld\",\n",
     "\n",
     "    # clean version - saves/2023-12-12T20:52:10.206__pomdp_trace.jld\n",
     "    # noisy version - saves/2023-12-12T20:49:13.392__pomdp_trace.jld\n",
@@ -798,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "id": "80313680-f3d7-490c-ae38-52f453957de7",
    "metadata": {},
    "outputs": [
@@ -808,14 +854,14 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(f, t) = GridWorlds.Viz.interactive_gui(\n",
-    "    get_args(trace2[])[3](0).map, get_posobs_seq(trace2), take_action2,\n",
+    "    t -> get_args(trace2[])[3](t).map, get_posobs_seq(trace2), take_action2,\n",
     "    save_fn=get_save_tr(trace2),\n",
     "    framerate=8,\n",
     "\n",
