experiment on xiaoyan

--- a/notebooks_messy/Experiment.ipynb
+++ b/notebooks_messy/Experiment.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "503d089d-b461-4115-9b73-f726dafe279a",
    "metadata": {
     "tags": []
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "9321f581-3f9d-404a-8689-0f7f279596c0",
    "metadata": {
     "tags": []
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "9dd2dc13",
    "metadata": {},
    "outputs": [
@@ -604,7 +604,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "31143f7c-4f46-4aa9-a409-63fcf112224d",
    "metadata": {
     "tags": []
@@ -647,7 +647,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "82e17666-8874-4c0e-abea-338c63a99a91",
    "metadata": {
     "tags": []
@@ -690,9 +690,16 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-13T15:53:07.872__pomdp_trace.jld.\n"
+     ]
     }
    ],
    "source": [
@@ -740,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "2b1a6e6f",
    "metadata": {},
    "outputs": [],
@@ -753,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "b3a8a204",
    "metadata": {},
    "outputs": [
@@ -763,16 +770,9 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T15:33:30.978__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "941613b6",
    "metadata": {},
    "outputs": [],
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "af5831bb",
    "metadata": {},
    "outputs": [
@@ -824,9 +824,16 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-13T15:57:49.036__pomdp_trace.jld.\n"
+     ]
     }
    ],
    "source": [
@@ -855,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "id": "e8f16db5",
    "metadata": {},
    "outputs": [],
@@ -868,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "id": "c48ae4c5",
    "metadata": {},
    "outputs": [
@@ -878,9 +885,16 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-13T16:00:27.357__pomdp_trace.jld.\n"
+     ]
     }
    ],
    "source": [
@@ -901,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "0b14bc20",
    "metadata": {},
    "outputs": [
@@ -911,7 +925,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "id": "46028ac2",
    "metadata": {},
    "outputs": [],
@@ -955,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "id": "9143b84f",
    "metadata": {},
    "outputs": [
@@ -965,7 +979,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -973,7 +987,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T15:41:44.878__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-13T16:01:02.929__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -1078,7 +1092,8 @@
     "    # \"saves/2023-12-13T14:48:28.013__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-13T15:17:19__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-13T15:38:04.248__pomdp_trace.jld\",\n",
-    "    \"saves/2023-12-13T15:41:44.878__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-13T15:41:44.878__pomdp_trace.jld\",\n",
+    "    \"saves/2023-12-13T16:01:02.929__pomdp_trace.jld\",\n",
     "\n",
     "    # clean version - saves/2023-12-12T20:52:10.206__pomdp_trace.jld\n",
     "    # noisy version - saves/2023-12-12T20:49:13.392__pomdp_trace.jld\n",
