--- a/notebooks_messy/Experiment.ipynb
+++ b/notebooks_messy/Experiment.ipynb
@@ -29,7 +29,15 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GridWorlds [c15fd557-8ec5-4bf9-9d87-df57ac477796]\n"
+     ]
+    }
+   ],
    "source": [
     "import Makie   # Visualization Library\n",
     "using Revise      # For development; makes it so modifications\n",
@@ -499,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "id": "503d089d-b461-4115-9b73-f726dafe279a",
    "metadata": {
     "tags": []
@@ -635,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "id": "31143f7c-4f46-4aa9-a409-63fcf112224d",
    "metadata": {
     "tags": []
@@ -647,7 +655,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "id": "2b1a6e6f",
    "metadata": {},
    "outputs": [],
@@ -760,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "id": "b3a8a204",
    "metadata": {},
    "outputs": [
@@ -770,7 +778,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "id": "e8f16db5",
    "metadata": {},
    "outputs": [],
@@ -875,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "id": "c48ae4c5",
    "metadata": {},
    "outputs": [
@@ -885,16 +893,9 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T16:00:27.357__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
@@ -915,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "id": "0b14bc20",
    "metadata": {},
    "outputs": [
@@ -925,7 +926,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 62,
    "id": "46028ac2",
    "metadata": {},
    "outputs": [],
@@ -969,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "id": "9143b84f",
    "metadata": {},
    "outputs": [
@@ -979,16 +980,9 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T16:01:02.929__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
@@ -1062,10 +1056,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "665b91b1-9622-41ed-b963-3bee730df746",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GLMakie.Screen(...)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tr2, viz_actions = Utils.deserialize_trace_and_viz_actions(\n",
     "    # \"saves/2023-12-12T15:51:18.757__pomdp_trace.jld\",\n",
@@ -1093,7 +1098,9 @@
     "    # \"saves/2023-12-13T15:17:19__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-13T15:38:04.248__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-13T15:41:44.878__pomdp_trace.jld\",\n",
-    "    \"saves/2023-12-13T16:01:02.929__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-13T16:01:02.929__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-13T16:01:02.929__pomdp_trace.jld\",\n",
+    "    \"saves/2023-12-13T16:00:27.357__pomdp_trace.jld\",\n",
     "\n",
     "    # clean version - saves/2023-12-12T20:52:10.206__pomdp_trace.jld\n",
     "    # noisy version - saves/2023-12-12T20:49:13.392__pomdp_trace.jld\n",
@@ -1109,7 +1116,7 @@
     "    );\n",
     "trace2, take_action2 = make_trace_interactive(tr2);\n",
     "\n",
-    "# (f, t, _replay_actions) = GridWorlds.Viz.play_as_agent_gui(\n",
+    "# (f, t, _replay_actions) = GridWorlds.Viz.pdlay_as_agent_gui(\n",
     "#     get_obs_seq(trace2),\n",
     "#     take_action2,\n",
     "#     show_lines_to_walls=false,\n",
@@ -1122,10 +1129,10 @@
     "(f, t, _replay_actions) = GridWorlds.Viz.interactive_gui(\n",
     "    t -> get_args(trace2[])[3](t).map, get_posobs_seq(trace2), take_action2,\n",
     "    save_fn=get_save_tr(trace2),\n",
-    "    framerate=8,\n",
+    "    framerate=8,``\n",
     "\n",
     "    # Timing control for playback\n",
-    "    timing_args=get_timing_args(trace2; speedup_factor=3, max_delay=5)\n",
+    "    timing_args=get_timing_args(trace2; speedup_factor=1, max_delay=5)\n",
     ")\n",
     "display(f)"
    ]
