--- a/notebooks_messy/Experiment.ipynb
+++ b/notebooks_messy/Experiment.ipynb
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 84,
    "id": "9321f581-3f9d-404a-8689-0f7f279596c0",
    "metadata": {
     "tags": []
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 87,
    "id": "9dd2dc13",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 90,
    "id": "31143f7c-4f46-4aa9-a409-63fcf112224d",
    "metadata": {
     "tags": []
@@ -655,7 +655,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 91,
    "id": "82e17666-8874-4c0e-abea-338c63a99a91",
    "metadata": {
     "tags": []
@@ -698,7 +698,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -706,7 +706,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T16:47:33.062__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-13T17:05:07.203__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-13T17:05:07.218__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-13T17:05:07.261__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-13T17:05:07.297__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-13T17:05:07.333__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-13T17:05:07.383__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-13T17:05:07.410__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -755,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 92,
    "id": "2b1a6e6f",
    "metadata": {},
    "outputs": [],
@@ -768,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 93,
    "id": "b3a8a204",
    "metadata": {},
    "outputs": [
@@ -778,9 +784,16 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-13T17:07:01.334__pomdp_trace.jld.\n"
+     ]
     }
    ],
    "source": [
@@ -809,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 94,
    "id": "941613b6",
    "metadata": {},
    "outputs": [],
@@ -822,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 95,
    "id": "af5831bb",
    "metadata": {},
    "outputs": [
@@ -832,7 +845,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -840,7 +853,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T16:52:17.674__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-13T17:08:48.694__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-13T17:08:53.667__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -870,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 96,
    "id": "e8f16db5",
    "metadata": {},
    "outputs": [],
@@ -883,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 97,
    "id": "c48ae4c5",
    "metadata": {},
    "outputs": [
@@ -893,7 +907,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 98,
    "id": "0b14bc20",
    "metadata": {},
    "outputs": [
@@ -926,7 +940,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -934,7 +948,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T16:53:42.485__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-13T17:10:17.883__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -964,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 99,
    "id": "46028ac2",
    "metadata": {},
    "outputs": [],
@@ -977,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 100,
    "id": "9143b84f",
    "metadata": {},
    "outputs": [
@@ -987,7 +1001,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -995,7 +1009,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T16:54:15.869__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-13T17:10:51.170__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-13T17:11:58.588__pomdp_trace.jld.\n"
      ]
     }
    ],
