improvements with arijit

--- a/notebooks_messy/Experiment.ipynb
+++ b/notebooks_messy/Experiment.ipynb
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 121,
    "id": "b07fe72c",
    "metadata": {},
    "outputs": [],
@@ -502,12 +502,12 @@
     "struct MultiplyDistanceByConstant\n",
     "    c\n",
     "end\n",
-    "(d::MultiplyDistanceByConstant)(x) = x * d.c"
+    "(d::MultiplyDistanceByConstant)(x) = 2. + x * d.c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 135,
    "id": "503d089d-b461-4115-9b73-f726dafe279a",
    "metadata": {
     "tags": []
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 136,
    "id": "941613b6",
    "metadata": {},
    "outputs": [],
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 137,
    "id": "af5831bb",
    "metadata": {},
    "outputs": [
@@ -845,17 +845,9 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T17:08:48.694__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-13T17:08:53.667__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
@@ -978,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 130,
    "id": "46028ac2",
    "metadata": {},
    "outputs": [],
@@ -991,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 131,
    "id": "9143b84f",
    "metadata": {},
    "outputs": [
@@ -1001,17 +993,9 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T17:10:51.170__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-13T17:11:58.588__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
