xiaoyan + new maps

--- a/notebooks_messy/Experiment.ipynb
+++ b/notebooks_messy/Experiment.ipynb
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 161,
    "id": "503d089d-b461-4115-9b73-f726dafe279a",
    "metadata": {
     "tags": []
@@ -544,6 +544,8 @@
     "MAP_EXPLAIN_STRANGE = GridWorlds.load_custom_map(3)\n",
     "MAP_W_STRANGE = GridWorlds.load_custom_map(4)\n",
     "MAP_WOUT_STRANGE = GridWorlds.load_custom_map(5)\n",
+    "MAP2_W_STRANGE = GridWorlds.load_custom_map(6)\n",
+    "MAP2_WOUT_STRANGE = GridWorlds.load_custom_map(7)\n",
     "\n",
     "T_TO_PARAMS_INTRO = ConstantTToParams(_get_params(MAP_INTRO))\n",
     "T_TO_PARAMS_EXPLAIN_STRANGE = ConstantTToParams(_get_params(MAP_EXPLAIN_STRANGE))\n",
@@ -554,6 +556,12 @@
     "T_TO_PARAMS_TEST = TimedSwitchTToParams(\n",
     "    _get_params(MAP_W_STRANGE),\n",
     "    _get_params(MAP_WOUT_STRANGE),\n",
+    "    ((6, Inf),),\n",
+    "    ((-Inf, 6),),\n",
+    ")\n",
+    "T_TO_PARAMS_TEST2 = TimedSwitchTToParams(\n",
+    "    _get_params(MAP2_W_STRANGE),\n",
+    "    _get_params(MAP2_WOUT_STRANGE),\n",
     "    ((6, Inf),),\n",
     "    ((-Inf, 6),),\n",
     ")\n",
@@ -809,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 166,
    "id": "941613b6",
    "metadata": {},
    "outputs": [],
@@ -822,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 167,
    "id": "af5831bb",
    "metadata": {},
    "outputs": [
@@ -832,17 +840,9 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T17:41:56.038__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-13T17:45:11.161__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
@@ -966,20 +966,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 164,
    "id": "46028ac2",
    "metadata": {},
    "outputs": [],
    "source": [
     "world_trace_test2, take_action_test2 = get_interactive_trace(\n",
-    "    trajectory_model, T_TO_PARAMS_TEST,\n",
+    "    trajectory_model, T_TO_PARAMS_TEST2,\n",
     "    choicemap((GenPOMDPs.state_addr(0, :cell), (3, 3)))  \n",
     ");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 165,
    "id": "9143b84f",
    "metadata": {},
    "outputs": [
@@ -989,7 +989,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -997,7 +997,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T17:35:49.798__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-13T17:52:29.746__pomdp_trace.jld.\n"
      ]
     }
    ],
