--- a/notebooks_messy/Experiment.ipynb
+++ b/notebooks_messy/Experiment.ipynb
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 170,
    "id": "9321f581-3f9d-404a-8689-0f7f279596c0",
    "metadata": {
     "tags": []
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 173,
    "id": "9dd2dc13",
    "metadata": {},
    "outputs": [
@@ -620,7 +620,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 176,
    "id": "31143f7c-4f46-4aa9-a409-63fcf112224d",
    "metadata": {
     "tags": []
@@ -663,7 +663,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 177,
    "id": "82e17666-8874-4c0e-abea-338c63a99a91",
    "metadata": {
     "tags": []
@@ -706,7 +706,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 178,
    "id": "2b1a6e6f",
    "metadata": {},
    "outputs": [],
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 179,
    "id": "b3a8a204",
    "metadata": {},
    "outputs": [
@@ -779,16 +779,9 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T17:29:42.445__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
@@ -817,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 180,
    "id": "941613b6",
    "metadata": {},
    "outputs": [],
@@ -830,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 181,
    "id": "af5831bb",
    "metadata": {},
    "outputs": [
@@ -840,9 +833,16 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-13T18:14:18.649__pomdp_trace.jld.\n"
+     ]
     }
    ],
    "source": [
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 185,
    "id": "e8f16db5",
    "metadata": {},
    "outputs": [],
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 183,
    "id": "c48ae4c5",
    "metadata": {},
    "outputs": [
@@ -894,7 +894,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 186,
    "id": "0b14bc20",
    "metadata": {},
    "outputs": [
@@ -927,7 +927,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -935,8 +935,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T17:34:06.423__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-13T17:34:06.473__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-13T18:17:32.599__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -966,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 187,
    "id": "46028ac2",
    "metadata": {},
    "outputs": [],
@@ -979,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 188,
    "id": "9143b84f",
    "metadata": {},
    "outputs": [
@@ -989,7 +988,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -997,7 +996,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T17:52:29.746__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-13T18:19:45.183__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-13T18:21:51.756__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-13T18:21:52.908__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-13T18:21:53.015__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -1072,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 190,
    "id": "665b91b1-9622-41ed-b963-3bee730df746",
    "metadata": {},
    "outputs": [
@@ -1082,7 +1084,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1118,8 @@
     "    # \"saves/2023-12-13T15:41:44.878__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-13T16:01:02.929__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-13T16:01:02.929__pomdp_trace.jld\",\n",
-    "    \"saves/2023-12-13T16:00:27.357__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-13T16:00:27.357__pomdp_trace.jld\",\n",
+    "    \"saves/2023-12-13T18:21:53.015__pomdp_trace.jld\",\n",
     "\n",
     "    # clean version - saves/2023-12-12T20:52:10.206__pomdp_trace.jld\n",
     "    # noisy version - saves/2023-12-12T20:49:13.392__pomdp_trace.jld\n",
@@ -1145,7 +1148,7 @@
     "(f, t, _replay_actions) = GridWorlds.Viz.interactive_gui(\n",
     "    t -> get_args(trace2[])[3](t).map, get_posobs_seq(trace2), take_action2,\n",
     "    save_fn=get_save_tr(trace2),\n",
-    "    framerate=8,``\n",
+    "    framerate=8,\n",
     "\n",
     "    # Timing control for playback\n",
     "    timing_args=get_timing_args(trace2; speedup_factor=1, max_delay=5)\n",
